--- a/themes/hyde/assets/css/poole.css
+++ b/themes/hyde/assets/css/poole.css
@@ -327,7 +327,7 @@ tbody tr:nth-child(odd) th {
   display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
-  color: #757575;
+  color: var(--post-time-color);
 }
 
 /* Related posts */
